# libami

./: .gitignore  ACKNOWLEDGE.TXT  CMakeLists.txt  CMakeLists.txt.bak  COPYRIGHT.TXT  INSTALL.md  README.md  compile.sh
.github/workflows/: cmake.yml
doc/: CMakeLists.txt  CMakeLists.txt.bak  Doxyfile.in  Referencing.rst  conf.py  docs.rst  examples.rst  g_struct.rst  index.rst  install.rst  install.rst.bak  main_page.dox  pole_equiv_func  pole_equiv_func.rst  support.rst
doxygen/: Doxyfile
examples/: CMakeLists.txt  compile.sh
examples/src/: ami_example.cpp  ami_example.cpp.bak  examples.hpp  examples.hpp.bak  examples_main.cpp  examples_main.cpp.bak
extra/: refs.bib
extra/spec_examples/: compile.sh
extra/spec_examples/src/: ami_example.cpp  examples_main.cpp
pyami_examples/: example_2.py  example_main.py  pyami_example.py
pyami_src/: pyami.cpp  pyami_wrapper.cpp
pyami_tests/: example_2.py
spec_examples/src/: examples.hpp  examples_main.cpp
src/: ami.hpp  ami_base.cpp  ami_base.hpp  ami_base.hpp.bak  ami_base_construct.cpp  ami_base_evaluate.cpp  ami_base_evaluate.cpp.bak  ami_base_optimize.cpp  ami_base_terms.cpp  ami_base_terms_evaluate.cpp  ami_base_terms_optimize.cpp  ami_calc.cpp  ami_calc.hpp  ami_calc_evaluate.cpp  ami_calc_io.cpp  ami_calc_spectral.cpp  ami_calc_terms_spectral.cpp  ami_construct.cpp  ami_evaluate.cpp  ami_example.cpp  ami_helper.cpp  ami_load.cpp  ami_spec.cpp  ami_spec.hpp  ami_spec_eval.cpp  ami_spec_io.cpp  ami_spec_sigma.cpp  ami_torch.hpp  depricated_ami.hpp  depricated_ami_construct.cpp  depricated_ami_evaluate.cpp  depricated_ami_example.cpp  depricated_ami_helper.cpp
test/: CMakeLists.txt  CMakeLists.txt.save  blank.cpp  construct_tests.cpp  fermi_bose.cpp  get_energy.cpp  helper_functions.cpp  num_test.cpp  pole_equiv.cpp  secondtest.cpp
